--- a/src/utils/Domisili.jrxml
+++ b/src/utils/Domisili.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="39d6d73c-09d9-426b-a0d4-ce01a00a280d">
-	<property name="ireport.zoom" value="2.14358881000001"/>
-	<property name="ireport.x" value="212"/>
-	<property name="ireport.y" value="998"/>
+	<property name="ireport.zoom" value="1.7715610000000084"/>
+	<property name="ireport.x" value="8"/>
+	<property name="ireport.y" value="624"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT 
     s.id_surat,
@@ -69,7 +69,7 @@ WHERE
 	<title>
 		<band height="86" splitType="Stretch">
 			<staticText>
-				<reportElement x="169" y="60" width="213" height="26" uuid="ea63b9ae-b60e-48e2-ac6f-a8cac45c6537"/>
+				<reportElement x="159" y="60" width="213" height="26" uuid="ea63b9ae-b60e-48e2-ac6f-a8cac45c6537"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="17" isBold="true" isUnderline="true"/>
 				</textElement>
@@ -140,55 +140,6 @@ WHERE
 				</textElement>
 				<text><![CDATA[Alamat]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="223" y="198" width="69" height="20" uuid="b815b0ca-8ca3-4181-a50e-7f8e2ac9f340"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{alamat}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="10" width="69" height="20" uuid="e5696728-3817-4267-8276-425bd5798e23"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{nama}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="42" width="69" height="20" uuid="1a8897c7-84eb-442b-a804-c1a7faeaf85b"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{nik}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="138" width="69" height="20" uuid="ca5b1e1b-cb6c-4891-a70a-b5f14cc3ff37"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{agama}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="168" width="69" height="20" uuid="45c41ea7-e03d-4dc0-9bf6-f34965858547"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{pekerjaan}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="77" width="84" height="20" uuid="5fad352d-29d4-4c67-a2d1-415bef1a5d5b"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{jenis_kelamin}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="223" y="108" width="121" height="20" uuid="222b2b09-4c73-4ad4-9805-e39fd45cf87f"/>
-				<textElement>
-					<font fontName="Times New Roman" size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{tempat_tanggal_lahir}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="206" y="10" width="7" height="20" uuid="eba9f932-4110-4f10-ade0-88b6d8a8ef2e"/>
 				<textElement>
@@ -265,7 +216,7 @@ WHERE
 				<textElement>
 					<font fontName="Times New Roman" size="13"/>
 				</textElement>
-				<text><![CDATA[Demikian  surat  keterangan  ini  dibuat  buat  dengan  sebenarnya  agar  dapat  dipergunakan  ]]></text>
+				<text><![CDATA[Demikian  surat  keterangan  ini  dibuat  dengan  sebenarnya  agar  dapat  dipergunakan  ]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="33" y="347" width="464" height="19" uuid="188333be-e570-4223-94f7-8655d246d2b2"/>
@@ -274,10 +225,6 @@ WHERE
 				</textElement>
 				<text><![CDATA[sebagaimana  mestinya. ]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="358" y="424" width="46" height="20" uuid="c5c6b2b5-9217-4209-b17b-d377b2e35f42"/>
-				<textFieldExpression><![CDATA[Sidoarjo]]></textFieldExpression>
-			</textField>
 		</band>
 	</columnHeader>
 	<detail>
